src/test/deca/syntax/invalid/if-wrong-order.deca
// Description:
//    Inversion de else et else if
//
// Resultats:
//    Erreur du parser ligne 11, au niveau du else
//
// Historique:
//    Cree le 09/01/2024

{
    if(true) {} else {} else if(false) {}
}
